// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML elements <a> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 4,
    "filePath": "test-files/elements/a-invalid.html",
    "messages": Array [
      Object {
        "column": 11,
        "context": undefined,
        "line": 2,
        "message": "Element <div> is not permitted as content in <span>",
        "offset": 41,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 5,
        "context": undefined,
        "line": 5,
        "message": "Element <button> is not permitted as descendant of <a>",
        "offset": 133,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 11,
        "context": undefined,
        "line": 6,
        "message": "Element <button> is not permitted as descendant of <a>",
        "offset": 181,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 11,
        "context": undefined,
        "line": 9,
        "message": "Element <a> is not permitted as descendant of <a>",
        "offset": 271,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<!-- should be transparent -->
<span><a><div>foo</div></a></span>

<!-- should not allow interactive as content or descendant-->
<a><button type=\\"button\\">foo</button></a>
<a><span><button type=\\"button\\">foo</button></span></a>

<!-- should not allow nesting -->
<a><span><a>foo</a></span></a>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <a> valid markup 1`] = `Array []`;

exports[`HTML elements <abbr> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/elements/abbr-invalid.html",
    "messages": Array [
      Object {
        "column": 8,
        "context": undefined,
        "line": 2,
        "message": "Element <div> is not permitted as content in <abbr>",
        "offset": 46,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<!-- should not allow flow content -->
<abbr><div>foo</div></abbr>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <abbr> valid markup 1`] = `Array []`;

exports[`HTML elements <acronym> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/elements/acronym-invalid.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 2,
        "message": "<acronym> is deprecated",
        "offset": 32,
        "ruleId": "deprecated",
        "severity": 2,
        "size": 7,
      },
    ],
    "source": "<!-- element is deprecated -->
<acronym title=\\"foobar\\">FB</acronym>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <acronym> valid markup 1`] = `Array []`;

exports[`HTML elements <address> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 5,
    "filePath": "test-files/elements/address-invalid.html",
    "messages": Array [
      Object {
        "column": 11,
        "context": undefined,
        "line": 2,
        "message": "Element <h1> is not permitted as descendant of <address>",
        "offset": 55,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 2,
      },
      Object {
        "column": 16,
        "context": undefined,
        "line": 5,
        "message": "Element <article> is not permitted as descendant of <address>",
        "offset": 146,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 7,
      },
      Object {
        "column": 16,
        "context": undefined,
        "line": 8,
        "message": "Element <header> is not permitted as descendant of <address>",
        "offset": 259,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 16,
        "context": undefined,
        "line": 9,
        "message": "Element <footer> is not permitted as descendant of <address>",
        "offset": 310,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 16,
        "context": undefined,
        "line": 12,
        "message": "Element <address> is not permitted as descendant of <address>",
        "offset": 396,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 7,
      },
    ],
    "source": "<!-- should not allow heading as content -->
<address><h1>foo</h1></address>

<!-- should not allow sectioning as descendant-- -->
<address><div><article>foo</article></div></address>

<!-- should not allow header or footer as descendant-- -->
<address><div><header>foo</header></div></address>
<address><div><footer>foo</footer></div></address>

<!-- should not allow nesting -->
<address><div><address>foo</address></div></address>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <address> valid markup 1`] = `Array []`;

exports[`HTML elements <applet> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/elements/applet-invalid.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 2,
        "message": "<applet> is deprecated",
        "offset": 32,
        "ruleId": "deprecated",
        "severity": 2,
        "size": 6,
      },
    ],
    "source": "<!-- element is deprecated -->
<applet></applet>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <applet> valid markup 1`] = `Array []`;

exports[`HTML elements <area> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 4,
    "filePath": "test-files/elements/area-invalid.html",
    "messages": Array [
      Object {
        "column": 14,
        "context": undefined,
        "line": 6,
        "message": "End tag for <area> must be omitted",
        "offset": 101,
        "ruleId": "void",
        "severity": 2,
        "size": 1,
      },
      Object {
        "column": 8,
        "context": undefined,
        "line": 11,
        "message": "End tag for <area> must be omitted",
        "offset": 173,
        "ruleId": "void",
        "severity": 2,
        "size": 1,
      },
      Object {
        "column": 3,
        "context": Object {
          "allowed": Array [
            "rect",
            "circle",
            "poly",
          ],
          "attribute": "shape",
          "element": "area",
          "value": "",
        },
        "line": 14,
        "message": "Attribute \\"shape\\" has invalid value \\"\\"",
        "offset": 221,
        "ruleId": "attribute-allowed-values",
        "severity": 2,
        "size": 4,
      },
      Object {
        "column": 15,
        "context": Object {
          "allowed": Array [
            "rect",
            "circle",
            "poly",
          ],
          "attribute": "shape",
          "element": "area",
          "value": "foobar",
        },
        "line": 15,
        "message": "Attribute \\"shape\\" has invalid value \\"foobar\\"",
        "offset": 250,
        "ruleId": "attribute-allowed-values",
        "severity": 2,
        "size": 6,
      },
    ],
    "source": "<!-- should require <map> ancestor -->
<area>

<map>
	<!-- should not allow end tag -->
	<area></area>

	<!-- should not allow content -->
	<area>
		<span>foo</span>
	</area>

	<!-- should not allow shape attribute -->
	<area shape=\\"\\">
	<area shape=\\"foobar\\">
</map>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <area> valid markup 1`] = `Array []`;

exports[`HTML elements <article> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/elements/article-invalid.html",
    "messages": Array [
      Object {
        "column": 4,
        "context": undefined,
        "line": 4,
        "message": "Element <main> is not permitted as descendant of <article>",
        "offset": 77,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!-- should disallow <main> as descendant (HTML 5.0) -->
<article>
	<div>
		<main>foo</main>
	</div>
</article>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <article> valid markup 1`] = `Array []`;
